--- a/appsettings.json
+++ b/appsettings.json
@@ -7,17 +7,17 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=JOYXPHIM;Integrated Security=True;Trust Server Certificate=True;"
+    "DefaultConnection": ""
   },
   "Jwt": {
     "Issuer": "http://localhost:5049/",
     "Audience": "http://localhost:5049/",
-    "Key": "WzFmMTaKhnsDLQ0QotNXeKHVWxytJl3j1I3vIT1yKP8="
+    "Key": ""
   },
   "Authentication": {
     "Google": {
-      "ClientId": "739125590016-7ifup9sa0ir1h2egh4v95sbd1todr18f.apps.googleusercontent.com",
-      "ClientSecret": "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"
+      "ClientId": "",
+      "ClientSecret": ""
     }
   }
 }
